Menu tabs (transporter).

--- a/app/components/Auction/List/auctionListView.html
+++ b/app/components/Auction/List/auctionListView.html
@@ -1,3 +1,4 @@
+<m param="{route}">
 <div class="auction-list-page">
     <h1>{{'texts.auction.auction_list' | i18next}}</h1>
     <div class="auction-list col-xs-12 col-sm-12 col-md-12 col-lg-12 ">
@@ -29,3 +30,4 @@
         </div>
 	</div>
 </div>
+</m>
