--- a/app/components/MyCompany/AddEmployee/addEmployeeView.html
+++ b/app/components/MyCompany/AddEmployee/addEmployeeView.html
@@ -1,78 +1,80 @@
-<div class="add-user-page" ng-open="formLabels('addUserForm')" >
-  <h1>{{'texts.registration_user' | i18next}}</h1>
-  <form name="addUserForm" novalidate>
+<m param="{route}">
+  <div class="add-user-page" ng-open="formLabels('addUserForm')" >
+    <h1>{{'texts.registration_user' | i18next}}</h1>
+    <form name="addUserForm" novalidate>
 
-    <div class="form-group radio-group half">
-      <input type="radio" name="role" class="my-radio" id="transporter" ng-model="user.role" value="2" required/>
-      <label for="transporter">{{'texts.transporter' | i18next}}</label>
-    </div>
-    <div class="form-group radio-group half">
-      <input type="radio" name="role" class="my-radio" id="sender" ng-model="user.role" value="1"/>
-      <label for="sender">{{'texts.sender' | i18next}}</label>
-    </div>
+      <div class="form-group radio-group half">
+        <input type="radio" name="role" class="my-radio" id="transporter" ng-model="user.role" value="2" required/>
+        <label for="transporter">{{'texts.transporter' | i18next}}</label>
+      </div>
+      <div class="form-group radio-group half">
+        <input type="radio" name="role" class="my-radio" id="sender" ng-model="user.role" value="1"/>
+        <label for="sender">{{'texts.sender' | i18next}}</label>
+      </div>
 
-    <div class="form-group half">
-      <input type="text" name="username" class="form-control my-input" placeholder="{{'texts.username' | i18next}}" ng-model="employee.username"
-             ng-class="{'input-error' : addUserForm.username.$invalid && (!addUserForm.username.$pristine || clicked)}"
-             ng-minlength="8" required />
-    </div>
-    <div class="form-group half">
-      <input type="password" name="password" class="form-control my-input" placeholder="{{'texts.password' | i18next}}" ng-model="employee.password"
-             ng-class="{'input-error' : addUserForm.password.$invalid && (!addUserForm.password.$pristine || clicked)}"
-             ng-minlength="8" required />
-    </div>
-    <div class="form-group half">
-      <input type="password" name="confirmPassword" class="form-control my-input" placeholder="{{'texts.confirmPassword' | i18next}}" ng-model="employee.confirmPassword"
-             ng-class="{'input-error' : addUserForm.confirmPassword.$invalid && (!addUserForm.confirmPassword.$pristine || clicked)}"
-             ng-minlength="8" required />
-    </div>
-    <div class="form-group half">
-      <input type="text" name="name" class="form-control my-input" placeholder="{{'texts.name' | i18next}}" ng-model="employee.name"
-             ng-class="{'input-error' : addUserForm.name.$invalid && (!addUserForm.name.$pristine || clicked)}"
-             required />
-    </div>
-     <div class="form-group half">
-       <input type="text" name="surname" class="form-control my-input" placeholder="{{'texts.surname' | i18next}}" ng-model="employee.surname"
-              ng-class="{'input-error' : addUserForm.surname.$invalid && (!addUserForm.surname.$pristine || clicked)}"
-              required />
-    </div>
-    <div class="form-group half">
-      <input type="text" name="address_state" class="form-control my-input" placeholder="{{'texts.address_state' | i18next}}" ng-model="employee.address_state"
-             ng-class="{'input-error' : addUserForm.address_state.$invalid && (!addUserForm.address_state.$pristine || clicked)}"
-             required />
-    </div>
-    <div class="form-group half">
-      <input type="text" name="address_street" class="form-control my-input" placeholder="{{'texts.address_street' | i18next}}" ng-model="employee.address_street"
-             ng-class="{'input-error' : addUserForm.address_street.$invalid && (!addUserForm.address_street.$pristine || clicked)}"
-             required />
-    </div>
-    <div class="form-group half">
-      <input type="text" name="address_house_number" class="form-control my-input" placeholder="{{'texts.address_house_number' | i18next}}" ng-model="employee.address_house_number"
-             ng-class="{'input-error' : addUserForm.address_house_number.$invalid && (!addUserForm.address_house_number.$pristine || clicked)}"
-             required />
-    </div>
-    <div class="form-group half">
-      <input type="text" name="psc" class="form-control my-input" placeholder="{{'texts.psc' | i18next}}" ng-model="employee.psc"
-             ng-class="{'input-error' : addUserForm.psc.$invalid && (!addUserForm.psc.$pristine || clicked)}"
-             required />
-    </div>
-    <div class="form-group half">
-      <input type="text" name="phone_number" class="form-control my-input" placeholder="{{'texts.phone_number' | i18next}}" ng-model="employee.phone_number"
-             ng-class="{'input-error' : addUserForm.phone_number.$invalid && (!addUserForm.phone_number.$pristine || clicked)}"
-             ng-minlength="9" required />
-    </div>
-    <div class="form-group half">
-      <input type="email" name="email" class="form-control my-input" placeholder="{{'texts.email' | i18next}}" ng-model="employee.email"
-             ng-class="{'input-error' : addUserForm.email.$invalid && (!addUserForm.email.$pristine || clicked)}"
-             required />
-    </div>
-    <div class="form-group half" ng-if="employee.role == 4">
-      <input type="text" name="driver_licence" class="form-control my-input" placeholder="{{'texts.driver_licence' | i18next}}" ng-model="employee.driver_licence"
-             ng-class="{'input-error' : addUserForm.driver_licence.$invalid && (!addUserForm.driver_licence.$pristine || clicked)}"
-             required />
-    </div>
-    <div class="form-group text-center">
-      <div class="my-button important-button big-button" ng-click="AddUser()">{{'texts.registration_user' | i18next}}</div>
-    </div>
-  </form>
-</div>
+      <div class="form-group half">
+        <input type="text" name="username" class="form-control my-input" placeholder="{{'texts.username' | i18next}}" ng-model="employee.username"
+               ng-class="{'input-error' : addUserForm.username.$invalid && (!addUserForm.username.$pristine || clicked)}"
+               ng-minlength="8" required />
+      </div>
+      <div class="form-group half">
+        <input type="password" name="password" class="form-control my-input" placeholder="{{'texts.password' | i18next}}" ng-model="employee.password"
+               ng-class="{'input-error' : addUserForm.password.$invalid && (!addUserForm.password.$pristine || clicked)}"
+               ng-minlength="8" required />
+      </div>
+      <div class="form-group half">
+        <input type="password" name="confirmPassword" class="form-control my-input" placeholder="{{'texts.confirmPassword' | i18next}}" ng-model="employee.confirmPassword"
+               ng-class="{'input-error' : addUserForm.confirmPassword.$invalid && (!addUserForm.confirmPassword.$pristine || clicked)}"
+               ng-minlength="8" required />
+      </div>
+      <div class="form-group half">
+        <input type="text" name="name" class="form-control my-input" placeholder="{{'texts.name' | i18next}}" ng-model="employee.name"
+               ng-class="{'input-error' : addUserForm.name.$invalid && (!addUserForm.name.$pristine || clicked)}"
+               required />
+      </div>
+       <div class="form-group half">
+         <input type="text" name="surname" class="form-control my-input" placeholder="{{'texts.surname' | i18next}}" ng-model="employee.surname"
+                ng-class="{'input-error' : addUserForm.surname.$invalid && (!addUserForm.surname.$pristine || clicked)}"
+                required />
+      </div>
+      <div class="form-group half">
+        <input type="text" name="address_state" class="form-control my-input" placeholder="{{'texts.address_state' | i18next}}" ng-model="employee.address_state"
+               ng-class="{'input-error' : addUserForm.address_state.$invalid && (!addUserForm.address_state.$pristine || clicked)}"
+               required />
+      </div>
+      <div class="form-group half">
+        <input type="text" name="address_street" class="form-control my-input" placeholder="{{'texts.address_street' | i18next}}" ng-model="employee.address_street"
+               ng-class="{'input-error' : addUserForm.address_street.$invalid && (!addUserForm.address_street.$pristine || clicked)}"
+               required />
+      </div>
+      <div class="form-group half">
+        <input type="text" name="address_house_number" class="form-control my-input" placeholder="{{'texts.address_house_number' | i18next}}" ng-model="employee.address_house_number"
+               ng-class="{'input-error' : addUserForm.address_house_number.$invalid && (!addUserForm.address_house_number.$pristine || clicked)}"
+               required />
+      </div>
+      <div class="form-group half">
+        <input type="text" name="psc" class="form-control my-input" placeholder="{{'texts.psc' | i18next}}" ng-model="employee.psc"
+               ng-class="{'input-error' : addUserForm.psc.$invalid && (!addUserForm.psc.$pristine || clicked)}"
+               required />
+      </div>
+      <div class="form-group half">
+        <input type="text" name="phone_number" class="form-control my-input" placeholder="{{'texts.phone_number' | i18next}}" ng-model="employee.phone_number"
+               ng-class="{'input-error' : addUserForm.phone_number.$invalid && (!addUserForm.phone_number.$pristine || clicked)}"
+               ng-minlength="9" required />
+      </div>
+      <div class="form-group half">
+        <input type="email" name="email" class="form-control my-input" placeholder="{{'texts.email' | i18next}}" ng-model="employee.email"
+               ng-class="{'input-error' : addUserForm.email.$invalid && (!addUserForm.email.$pristine || clicked)}"
+               required />
+      </div>
+      <div class="form-group half" ng-if="employee.role == 4">
+        <input type="text" name="driver_licence" class="form-control my-input" placeholder="{{'texts.driver_licence' | i18next}}" ng-model="employee.driver_licence"
+               ng-class="{'input-error' : addUserForm.driver_licence.$invalid && (!addUserForm.driver_licence.$pristine || clicked)}"
+               required />
+      </div>
+      <div class="form-group text-center">
+        <div class="my-button important-button big-button" ng-click="AddUser()">{{'texts.registration_user' | i18next}}</div>
+      </div>
+    </form>
+  </div>
+</m>
