Menu visual update, company page no data information

--- a/app/components/Manage/ShipmentsManage/shipmentsManageView.html
+++ b/app/components/Manage/ShipmentsManage/shipmentsManageView.html
@@ -1,5 +1,5 @@
 <m param="{route}">
-    <div class="auction-list-page row">
+    <div class="auction-list-page">
         <h1>{{'texts.shipment_manage' | i18next}}</h1>
         <h2>{{'texts.auction_for_assign' | i18next}}</h2>
         <div class="auction-list col-xs-12 col-sm-12 col-md-12 col-lg-12 ">
@@ -20,7 +20,7 @@
             </div>
         </div>
     </div>
-    <div class="assignments auction-list-page row">
+    <!--div class="assignments auction-list-page row">
         <h2>Přiřazení řidiči na zásilky</h2>
         <div class="auction-list col-xs-12 col-sm-12 col-md-12 col-lg-12 ">
             <div ng-if="assigments.length" class="auction-header-line col-sm-12 col-md-12 col-lg-12">
@@ -49,5 +49,5 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div -->
 </m>
