--- a/app/components/MyCompany/myCompanyView.html
+++ b/app/components/MyCompany/myCompanyView.html
@@ -25,7 +25,7 @@
 
     <div class="col-md-6">
         <h2>{{'texts.drivers' | i18next}}</h2>
-        <table class="table table-striped table-responsive company-list">
+        <table ng-if="drivers.length" class="table table-striped table-responsive company-list">
             <tr>
                 <th>Username</th>
                 <th>Name</th>
@@ -43,12 +43,15 @@
                 </td>
             </tr>
         </table>
+        <div ng-if="!drivers.length" class="text-center text-info">
+            No drivers
+        </div>
     </div>
 
     <div class="col-md-12">
 
         <h2>{{'texts.vehicles' | i18next}}</h2>
-        <table class="table table-striped table-responsive company-list">
+        <table ng-if="vehicles.length" class="table table-striped table-responsive company-list">
             <tr>
                 <th>Type</th>
                 <th>Brand</th>
@@ -68,5 +71,8 @@
                 </td>
             </tr>
         </table>
+        <div ng-if="!vehicles.length" class="text-center text-info">
+            No vehicles
+        </div>
     </div>
 </m>
