invoices are ready

--- a/app/components/Manage/ViewShipments/viewShipmentsView.html
+++ b/app/components/Manage/ViewShipments/viewShipmentsView.html
@@ -46,10 +46,10 @@
                     <detail-shipment shipment-item="{item}"></detail-shipment>
                 </div>
             </div>
-            <div ng-click="getInvoice(1)">INVOICE</div>
+            <div ng-click="getInvoice(2025, false)">INVOICE</div>
                 <!-- Only for andorid app -->
-                <!--<input type="file" id="newPhotos" class="uploadFile" accept="image/*" eg-files="photos" has-files="hasFiles" multiple>
-                <input class="btn btn-primary" type="button" ng-click="uploadPhoto(photos)" value="upload"> -->
+                <input type="file" id="newPhotos" class="uploadFile" accept="image/*" eg-files="photos" has-files="hasFiles" multiple>
+                <input class="btn btn-primary" type="button" ng-click="uploadPhoto(photos)" value="upload">
         </div>
     </div>
 </m>
