--- a/app/components/Account/Registration/registrationView.html
+++ b/app/components/Account/Registration/registrationView.html
@@ -87,7 +87,7 @@
       ng-minlength="9" required />
     </div>
     <div class="form-group half">
-      <label><input type="checkbox"> Souhlasím s podmínkama - TODO for Merin</label>
+      <label><input type="checkbox">{{'texts.accept_conditions' | i18next}}</label>
     </div>
     <div class="form-group buttons">
       <div class="my-button big-button important-button" ng-click="registration()">{{'texts.registration' | i18next}}</div>
