--- a/app/components/Account/Registration/registrationView.html
+++ b/app/components/Account/Registration/registrationView.html
@@ -32,13 +32,13 @@
       ng-minlength="8" required />
     </div>
     <div class="form-group half">
-      <input type="text" name="contact_person_name" class="form-control my-input" placeholder="{{'texts.contact_person_name' | i18next}}" ng-model="user.contact_person_name" 
-      ng-class="{'input-error' : registrationForm.contact_person_name.$invalid && (!registrationForm.contact_person_name.$pristine || clicked)}" 
+      <input type="text" name="person_name" class="form-control my-input" placeholder="{{'texts.person_name' | i18next}}" ng-model="user.person_name"
+      ng-class="{'input-error' : registrationForm.person_name.$invalid && (!registrationForm.person_name.$pristine || clicked)}"
       required />
     </div>
     <div class="form-group half">
-      <input type="text" name="contact_person_surname" class="form-control my-input" placeholder="{{'texts.contact_person_surname' | i18next}}" ng-model="user.contact_person_surname" 
-      ng-class="{'input-error' : registrationForm.contact_person_surname.$invalid && (!registrationForm.contact_person_surname.$pristine || clicked)}" 
+      <input type="text" name="person_surname" class="form-control my-input" placeholder="{{'texts.person_surname' | i18next}}" ng-model="user.person_surname"
+      ng-class="{'input-error' : registrationForm.person_surname.$invalid && (!registrationForm.person_surname.$pristine || clicked)}"
       required />
     </div>
     <div class="form-group half">
