--- a/app/components/Company/AddDriver/addDriverView.html
+++ b/app/components/Company/AddDriver/addDriverView.html
@@ -3,15 +3,6 @@
     <h1>{{'texts.registration_user' | i18next}}</h1>
     <form name="addUserForm" novalidate>
 
-      <div class="form-group radio-group half">
-        <input type="radio" name="role" class="my-radio" id="driver" ng-model="employee.role" value="4" required/>
-        <label for="driver">{{'texts.driver' | i18next}}</label>
-      </div>
-      <div class="form-group radio-group half">
-        <input type="radio" name="role" class="my-radio" id="dispatcher" ng-model="employee.role" value="3"/>
-        <label for="dispatcher">{{'texts.dispatcher' | i18next}}</label>
-      </div>
-
       <div class="form-group half">
         <input type="text" name="username" class="form-control my-input" placeholder="{{'texts.username' | i18next}}" ng-model="employee.username"
                ng-class="{'input-error' : addUserForm.username.$invalid && (!addUserForm.username.$pristine || clicked)}"
@@ -67,7 +58,7 @@
                ng-class="{'input-error' : addUserForm.email.$invalid && (!addUserForm.email.$pristine || clicked)}"
                required />
       </div>
-      <div class="form-group half" ng-if="employee.role == 4">
+      <div class="form-group half">
         <input type="text" name="driver_licence" class="form-control my-input" placeholder="{{'texts.driver_licence' | i18next}}" ng-model="employee.driver_licence"
                ng-class="{'input-error' : addUserForm.driver_licence.$invalid && (!addUserForm.driver_licence.$pristine || clicked)}"
                required />
