--- a/app/components/Shipments/new/newShipmentsView.html
+++ b/app/components/Shipments/new/newShipmentsView.html
@@ -1,21 +1,19 @@
 <m param="{route}">
     <div class="auction-list-page">
-        <h1>{{'texts.shipment_manage' | i18next}}</h1>
-        <h2>{{'texts.auction_for_assign' | i18next}}</h2>
         <div class="auction-list col-xs-12 col-sm-12 col-md-12 col-lg-12 ">
-            <div ng-if="myWinAuction.length" class="auction-header-line col-sm-12 col-md-12 col-lg-12">
+            <h2>{{'texts.shipment.new' | i18next}}</h2>
+            <div ng-if="newShipments.length" class="auction-header-line col-sm-12 col-md-12 col-lg-12">
                 <div class="auction-header col-sm-9 col-md-9 col-lg-10">
                     <div class="auction-cell col-sm-2 col-md-2 col-lg-2">{{'texts.auction.from' | i18next}}</div>
                     <div class="auction-cell col-sm-2 col-md-2 col-lg-2">{{'texts.auction.to' | i18next}}</div>
                     <div class="auction-cell col-sm-4 col-md-4 col-lg-4">{{'texts.auction.freight_description' | i18next}}</div>
-                    <div class="auction-cell col-sm-2 col-md-2 col-lg-2">{{'texts.auction.price' | i18next}}</div>
-                    <div class="auction-cell col-sm-2 col-md-2 col-lg-2">{{'texts.auction.end_auction' | i18next}}</div>
+                    <div class="auction-cell col-sm-2 col-md-2 col-lg-2">{{'texts.auction.driver' | i18next}}</div>
                 </div>
             </div>
             <div class="auction-body col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                <div ng-if="!myWinAuction.length" class="no-auction">{{'texts.auction.no_auction' | i18next}}</div>
-                <div class="auction-item" ng-repeat="item in myWinAuction">
-                    <detail-auction auction-item="{item}" drivers="{drivers}"></detail-auction>
+                <div ng-if="!newShipments.length" class="no-auction">{{'texts.shipment.no_shipments' | i18next}}</div>
+                <div class="auction-item" ng-repeat="item in newShipments">
+                    <detail-shipment shipment-item="{item}"></detail-shipment>
                 </div>
             </div>
         </div>
