zprovozneni gps, mapy, fotky

--- a/app/components/Auction/Create/createAuctionView.html
+++ b/app/components/Auction/Create/createAuctionView.html
@@ -150,7 +150,7 @@
             required />
       </div>
       <div class="form-group text-center">
-        <div class="my-button important-button big-button" ng-click="addAuction()">{{'texts.auction.create_auction' | i18next}}</div>
+        <div class="my-button important-button big-button" ng-click="createAuction()">{{'texts.auction.create_auction' | i18next}}</div>
       </div>
     </form>
   </div>
