--- a/app/components/Company/AddDriver/addDriverView.html
+++ b/app/components/Company/AddDriver/addDriverView.html
@@ -41,6 +41,7 @@
       <div class="form-group half">
         <input type="text" name="address_house_number" class="form-control my-input" placeholder="{{'texts.address_house_number' | i18next}}" ng-model="employee.address_house_number"
                ng-class="{'input-error' : addUserForm.address_house_number.$invalid && (!addUserForm.address_house_number.$pristine || clicked)}"
+               ng-class="{'input-error' : addUserForm.address_house_number.$invalid && (!addUserForm.address_house_number.$pristine || clicked)}"
                required />
       </div>
       <div class="form-group half">
@@ -56,11 +57,6 @@
       <div class="form-group half">
         <input type="email" name="email" class="form-control my-input" placeholder="{{'texts.email' | i18next}}" ng-model="employee.email"
                ng-class="{'input-error' : addUserForm.email.$invalid && (!addUserForm.email.$pristine || clicked)}"
-               required />
-      </div>
-      <div class="form-group half">
-        <input type="text" name="driver_licence" class="form-control my-input" placeholder="{{'texts.driver_licence' | i18next}}" ng-model="employee.driver_licence"
-               ng-class="{'input-error' : addUserForm.driver_licence.$invalid && (!addUserForm.driver_licence.$pristine || clicked)}"
                required />
       </div>
       <div class="form-group text-center">
