--- a/app/components/Company/companyView.html
+++ b/app/components/Company/companyView.html
@@ -1,23 +1,32 @@
 <m param="{route}">
     <h1>{{'texts.company' | i18next}}</h1>
-
-    <div class="col-md-6">
+    <div class="col-md-12">
         <h2>{{'texts.drivers' | i18next}}</h2>
         <table ng-if="drivers.length" class="table table-striped table-responsive company-list">
             <tr>
                 <th>Username</th>
                 <th>Name</th>
                 <th>Surname</th>
-                <th>Driver Licence</th>
                 <th>Actions</th>
             </tr>
             <tr class="item" ng-repeat="driver in drivers">
                 <td>{{driver.username}}</td>
                 <td>{{driver.name}}</td>
                 <td>{{driver.surname}}</td>
-                <td>{{driver.driver_licence}}</td>
                 <td>
-                    <span class="glyphicon glyphicon-remove delete" ng-click="deleteUser(driver.ID)"></span>
+                    <div class='input-group datePickerVacation'>
+                        <input type='text' name="vacation" class="form-control my-input inputDatePicker-{{driver.ID}}" id="vacation" placeholder="{{'texts.vacation' | i18next}}"/>
+                        <span class="input-group-addon" ng-click="clickDatePicker(driver.ID)">
+                            <span class="glyphicon glyphicon-calendar"></span>
+                        </span>
+                    </div>
+                    <div class="vacation-actions">
+                        <span class="glyphicon glyphicon-plus" title="Add vacation" ng-click="addVacation(driver.ID)"></span>
+                        <span class="glyphicon glyphicon-minus" title="Delete vacation" ng-click="removeVacation(driver.ID)"></span>
+                    </div>
+                </td>
+                <td>
+                    <span class="glyphicon glyphicon-remove delete" title="Delete driver" ng-click="deleteUser(driver.ID)"></span>
                 </td>
             </tr>
         </table>
